--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ a:hover {
     margin-top: 40px;
 }
 
-@media (max-width: 375px) {
+@media only screen and (max-width: 768px) {
     body {
         margin: 10px;
     }
